fixed border become blurry on chrome when layer is rotated

--- a/src/components/draggable/resizer.scss
+++ b/src/components/draggable/resizer.scss
@@ -24,7 +24,7 @@ $handle-background: #fff;
     text-align: center;
     left: 50%;
     top: -$rotatable-handle-height;
-    border: 1px solid #808080;
+    border: thin solid #808080;
     box-sizing: border-box;
     width: $handle-size;
     height: $handle-size;
@@ -57,7 +57,7 @@ $handle-background: #fff;
     display: none;
     box-sizing: border-box;
     position: absolute;
-    border: 1px solid #808080;
+    border: thin solid #808080;
     width: $handle-size;
     height: $handle-size;
     background: $handle-background;
